# KrakenUSB

./: .gitmodules  CMakeLists.txt  README.md
src/: FreeRTOSconfig.h  main.c  tusb_config.h  usb_descriptors.c
src/include/: FreeRTOS_Kernel_import.cmake  FreeRTOSconfig.h
src/scheduler/: kraken_hal.c  kraken_hal.h  kraken_scheduler.c  kraken_scheduler.h
src/usb/: msc_disk.c  storage.c  storage.h
